lesson3/nginx-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-user
  labels:
    app: nginx-user
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
  - name: secret
    secret:
     secretName: db-creds
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-password
  labels:
    app: nginx-password
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html"
          readOnly: true
  volumes:
  - name: secret
    secret:
     secretName: db-creds
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-url
  labels:
    app: nginx-url
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html"
          readOnly: true
  volumes:
  - name: secret
    secret:
     secretName: db-creds
