lesson3/nginx-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: username-http-svc
  labels:
    app: nginx-user
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-user
---
apiVersion: v1
kind: Service
metadata:
  name: password-http-svc
  labels:
    app: nginx-password
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-password
---
apiVersion: v1
kind: Service
metadata:
  name: url-http-svc
  labels:
    app: nginx-url
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-url
